--- a/lentcar.html
+++ b/lentcar.html
@@ -122,6 +122,9 @@
             text-align: center;
             padding: 15px;
             margin-top: 20px;
+            position:fixed;
+            bottom : 0;
+            width:100%
         }
         footer div {
             margin: 5px 0;
@@ -198,6 +201,7 @@
     <div>CUSTOMER CENTER: TEL 000-0000-0000</div>
     <div>BANK ACCOUNT: 0000000000</div>
     <div>RETURN/EXCHANGE: 서울특별시 강남구 테헤란로 000</div>
+    <div>유카 (UCAR) TEL. 000 0000 0000 OWNER. NNN</div>
     <div>COPYRIGHT © 유카 주식회사. ALL RIGHTS RESERVED.</div>
 </footer>
 
