--- a/mypage.html
+++ b/mypage.html
@@ -1,194 +1,303 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>마이페이지</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        header a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        header a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .profile-section {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 0;
-            border-bottom: 1px solid #ddd;
-        }
-        .profile-section img {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-        }
-        .profile-section .user-info {
-            display: flex;
-            align-items: center;
-        }
-        .profile-section .user-info span {
-            margin-left: 10px;
-            font-size: 18px;
-        }
-        .stats {
-            display: flex;
-            justify-content: space-around;
-            padding: 20px 0;
-            border-bottom: 1px solid #ddd;
-        }
-        .stats div {
-            text-align: center;
-        }
-        .stats div h3 {
-            margin: 0;
-            font-size: 24px;
-            color: #333;
-        }
-        .stats div p {
-            color: #888;
-            margin: 5px 0 0;
-        }
-        .links {
-            display: flex;
-            justify-content: space-around;
-            padding: 20px 0;
-        }
-        .links ul {
-            list-style: none;
-            padding: 0;
-        }
-        .links ul li {
-            margin: 5px 0;
-        }
-        .links ul li a {
-            text-decoration: none;
-            color: #333;
-        }
-        .links ul li a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            margin-top: 20px;
-        }
-        .login-section {
-            text-align: center;
-            margin: 20px 0;
-        }
-        .login-section a {
-            text-decoration: none;
-            color: #007bff;
-            margin: 0 10px;
-        }
-        .login-section a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ucar 중고차 홈페이지</title>
+  <style>
+    /* 기본 스타일 */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+    }
+
+    /* 상단 네비게이션 바 */
+    .top-bar {
+      background-color: #f0f0f0;
+      padding: 5px 20px;
+      font-size: 0.9em;
+      text-align: right;
+    }
+
+    .top-bar span {
+      margin-left: 20px;
+      cursor: pointer;
+    }
+
+    /* 메인 헤더 */
+    header {
+      background-color: #fff;
+      padding: 10px 20px;
+      text-align: center;
+      border-bottom: 1px solid #ddd;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin: 0;
+      font-weight: bold;
+      color: #00bfffc4;
+    }
+
+    /* 메인 메뉴 */
+    .main-menu {
+      display: flex;
+      justify-content: center;
+      background-color: #ffffff;
+      padding: 10px 0;
+      border-bottom: 3px solid #00bfffc4;
+    }
+
+    .main-menu a {
+      margin: 0 15px;
+      color: #333;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .main-menu a:hover {
+      color: #00bfffc4;
+
+    }
+
+    /* Best 섹션 */
+    .best-section {
+      background-color: #00bfffc4;
+      padding: 20px 0;
+      text-align: center;
+      font-size: 1.8em;
+      font-weight: bold;
+      color: #fff;
+    }
+
+    /* 차량 이미지 및 검색 섹션 */
+    .search-section {
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    .car-images {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+
+    .car-images img {
+      width: 200px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .search-filters select, .search-filters button {
+      padding: 10px;
+      margin: 0 5px;
+      font-size: 1em;
+      border-radius: 5px;
+    }
+
+    .search-filters select {
+      border: 1px solid #ddd;
+    }
+
+    .search-filters button {
+      background-color: #ff4d4d;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    .search-filters button:hover {
+      background-color: #e60000;
+    }
+
+    /* 추천 차량 섹션 */
+    .recommend-section {
+      padding: 20px;
+      text-align: center;
+    }
+
+    .recommend-section h2 {
+      font-size: 1.5em;
+      margin-bottom: 20px;
+      color: #00bfffc4;
+    }
+
+    .recommend-cars {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .recommend-car {
+      width: 300px;
+      height: 200px;
+      background-color: #e0e0e0;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2em;
+      color: #999;
+    }
+
+    /* 푸터 */
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      font-size: 0.9em;
+      text-align: center;
+    }
+
+    footer div {
+      margin: 5px 0;
+    }
+
+    /* 모달 스타일 */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      width: 300px;
+    }
+
+    .modal-content input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+    }
+
+    .modal-content button {
+      width: 100%;
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+
+    .modal-content button:hover {
+      background-color: #45a049;
+    }
+
+    /* 모달 닫기 버튼 */
+    .close {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+  </style>
 </head>
 <body>
 
-<!-- 헤더 -->
-<header>
-    <div>
-        <a href="#">내차팔기</a>
-        <a href="#">내차사기</a>
-        <a href="#">렌트</a>
-        <a href="#">금융</a>
-        <a href="#">미디어</a>
-    </div>
-    <div class="login-section">
-        <a href="#">로그인</a> | 
-        <a href="#">회원가입</a>
-    </div>
-</header>
+  <!-- 헤더 -->
+  <header>
+    <h1>Ucar</h1>
+  </header>
 
-<!-- 메인 컨테이너 -->
-<div class="container">
-    <!-- 프로필 섹션 -->
-    <div class="profile-section">
-        <div class="user-info">
-            <img src="https://via.placeholder.com/40" alt="프로필 이미지">
-            <span>신이수</span>
-        </div>
-        <div>
-            톡톡 (최근 3개월 기준)
-        </div>
+  <!-- 네비게이션 메뉴 -->
+  <nav class="main-menu">
+    <a href="#">내차팔기</a>
+    <a href="#">내차사기</a>
+    <a href="#">렌트</a>
+    <a href="#">금융</a>
+    <a href="#">미디어</a>
+    <a href="login1.html">마이페이지</a>
+  </nav>
+
+  <!-- Best 섹션 -->
+  <div class="best-section">
+    Best
+  </div>
+
+  <!-- 차량 이미지 및 검색 섹션 -->
+  <div class="search-section">
+    <div class="car-images">
+      <img src="https://via.placeholder.com/200x150" alt="Car 1">
+      <img src="https://via.placeholder.com/200x150" alt="Car 2">
+      <img src="https://via.placeholder.com/200x150" alt="Car 3">
     </div>
-
-    <!-- 통계 섹션 -->
-    <div class="stats">
-        <div>
-            <h3>6</h3>
-            <p>찜한 차량</p>
-        </div>
-        <div>
-            <h3>21</h3>
-            <p>최근 본 차량</p>
-        </div>
-        <div>
-            <h3>0</h3>
-            <p>판매중 차량</p>
-        </div>
-        <div>
-            <h3>0</h3>
-            <p>판매된 차량</p>
-        </div>
-        <div>
-            <h3>0</h3>
-            <p>구매문의 차량</p>
-        </div>
+    <h2>원하는 차량 조회</h2>
+    <div class="search-filters">
+      <select>
+        <option>국산</option>
+        <option>수입</option>
+      </select>
+      <select>
+        <option>제조사</option>
+        <option>현대</option>
+        <option>기아</option>
+        <option>대우/GM</option>
+        <option>쌍용</option>
+      </select>
+      <select>
+        <option>모델</option>
+      </select>
+      <select>
+        <option>세부모델</option>
+      </select>
+      <button>검색하기</button>
     </div>
+  </div>
 
-    <!-- 링크 섹션 -->
-    <div class="links">
-        <ul>
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">이용약관</a></li>
-            <li><a href="#">공지사항</a></li>
-            <li><a href="#">계정정보</a></li>
-            <li><a href="#">로그아웃</a></li>
-        </ul>
-        <ul>
-            <li><a href="#">자동차조회</a></li>
-            <li><a href="#">최근활동</a></li>
-            <li><a href="#">찜한 차량</a></li>
-            <li><a href="#">고객센터</a></li>
-        </ul>
+  <!-- 추천 차량 섹션 -->
+  <div class="recommend-section">
+    <h2>Recommend Car</h2>
+    <div class="recommend-cars">
+      <div class="recommend-car">추천 차량 1</div>
+      <div class="recommend-car">추천 차량 2</div>
     </div>
-</div>
+  </div>
 
-<!-- 푸터 -->
-<footer>
-    <div>CUSTOMER CENTER: TEL 000-0000-0000 | BANK ACCOUNT: 0000000000 | RETURN/EXCHANGE: 서울특별시 강남구 테헤란로 000</div>
-    <div>COPYRIGHT © 유카 주식회사. ALL RIGHTS RESERVED.</div>
-</footer>
+  <!-- 로그인/회원가입 모달 -->
+  <div class="modal" id="myModal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2>로그인</h2>
+      <input type="text" placeholder="아이디">
+      <input type="password" placeholder="비밀번호">
+      <button>로그인</button>
+      <p>아직 계정이 없으신가요? <a href="#">회원가입</a></p>
+    </div>
+  </div>
 
-</body>
-</html>
+  <!-- 푸터 -->
+  <footer>
+    <div>CUSTOMER CENTER TEL 000 0000 0000</div>
+    <div>BANK ACCOUNT DD은행 000000000</div>
+    <div>RETURN / EXCHANGE 서울특별시 강남구 테헤란로 0000</div>
+    <div>유카 (UCAR) TEL. 000 0000 0000 OWNER. NNN</div>
+    <div>COPYRIGHT © 유카 주식회사 ALL RIGHTS RESERVED.</div>
+  </footer>
+
+  <script>
+    // 모달 열기
+    document.getElementById("openModal").onclick = function() {
+      document.getElementById("myModal").style.display = "flex";
+    };
+
+    // 모달 닫기
+   
