--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Ucar 중고차 홈페이지</title>
   <style>
     /* 기본 스타일 */
-    
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -14,22 +13,23 @@
       background-color: #f9f9f9;
     }
 
-    .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-        }
     /* 상단 네비게이션 바 */
     .top-bar {
       background-color: #f0f0f0;
       padding: 5px 20px;
       font-size: 0.9em;
-      text-align: center;
+      text-align: right;
     }
 
     .top-bar span {
       margin-left: 20px;
+      cursor: pointer;
     }
+    .logo {
+            font-size: 40px;
+            font-weight: bold;
+            color: #333;
+        }
 
     /* 메인 헤더 */
     header {
@@ -51,9 +51,10 @@
         .search-bar input {
             border: none;
             outline: none;
+            font-size: 1.2em;
         }
         .search-bar input::placeholder {
-            color: #aaa;
+            color: #676767;
         }
 
         nav {
@@ -73,7 +74,7 @@
       justify-content: center;
       background-color: #ffffff;
       padding: 10px 0;
-      border-bottom: 3px solid #60cfff;
+      border-bottom: 3px solid #00bfffc4;
     }
 
     .main-menu a {
@@ -84,16 +85,18 @@
     }
 
     .main-menu a:hover {
-      color: #000;
+      color: #00bfffc4;
+
     }
 
     /* Best 섹션 */
     .best-section {
-      background-color: #60cfff;
+      background-color: #00bfffc4;
       padding: 20px 0;
       text-align: center;
-      font-size: 1.5em;
+      font-size: 1.8em;
       font-weight: bold;
+      color: #fff;
     }
 
     /* 차량 이미지 및 검색 섹션 */
@@ -124,16 +127,18 @@
       border-radius: 5px;
     }
 
+    .search-filters select {
+      border: 1px solid #ddd;
+    }
+
     .search-filters button {
-      background-color: #ff4d4d;
+      background-color: #00bfffc4;
       color: #fff;
       border: none;
       cursor: pointer;
     }
 
-    .search-filters button:hover {
-      background-color: #e60000;
-    }
+    
 
     /* 추천 차량 섹션 */
     .recommend-section {
@@ -144,6 +149,7 @@
     .recommend-section h2 {
       font-size: 1.5em;
       margin-bottom: 20px;
+      color: #00bfffc4;
     }
 
     .recommend-cars {
@@ -166,42 +172,85 @@
 
     /* 푸터 */
     footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 15px;
-            margin-top: 20px;
-            position:fixed;
-            bottom : 0;
-            width:100%
-        }
-        footer div {
-            margin: 5px 0;
-        }
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      font-size: 0.9em;
+      text-align: center;
+    }
 
     footer div {
-     margin: 5px ;
+      margin: 5px 0;
     }
+
+    /* 모달 스타일 */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      width: 300px;
+    }
+
+    .modal-content input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+    }
+
+    .modal-content button {
+      width: 100%;
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+
+    .modal-content button:hover {
+      background-color: #45a049;
+    }
+
+    /* 모달 닫기 버튼 */
+    .close {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
   </style>
 </head>
 <body>
 
-
-
-  <header>
-    <div class="logo">UCAR</div>
-    <nav>
-        <a href="#">내차팔기</a>
-        <a href="#">내차사기</a>
-        <a href="lentcar.html">렌트</a>
-        <a href="#">금융</a>
-        <a href="#">미디어</a>
-    </nav>
-    <div class="search-bar">
-        <input type="text" placeholder="검색">
-    </div>
-</header>
-
+    <header>
+        <div class="logo">UCAR</div>
+        <nav>
+            <a href="#">내차팔기</a>
+            <a href="#">내차사기</a>
+            <a href="lentcar.html">렌트</a>
+            <a href="#">금융</a>
+            <a href="#">미디어</a>
+        </nav>
+        <div class="search-bar">
+            <input type="text" placeholder="검색">
+        </div>
+    </header>
   <!-- Best 섹션 -->
   <div class="best-section">
     Best
@@ -224,14 +273,11 @@
         <option>제조사</option>
         <option>현대</option>
         <option>기아</option>
-        <option>KGM</option>
+        <option>대우/GM</option>
         <option>쌍용</option>
       </select>
       <select>
         <option>모델</option>
-        <option>SUV</option>
-        <option>중형</option>
-        <option>대형</option>
       </select>
       <select>
         <option>세부모델</option>
@@ -249,6 +295,18 @@
     </div>
   </div>
 
+  <!-- 로그인/회원가입 모달 -->
+  <div class="modal" id="myModal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2>로그인</h2>
+      <input type="text" placeholder="아이디">
+      <input type="password" placeholder="비밀번호">
+      <button>로그인</button>
+      <p>아직 계정이 없으신가요? <a href="#">회원가입</a></p>
+    </div>
+  </div>
+
   <!-- 푸터 -->
   <footer>
     <div>CUSTOMER CENTER TEL 000 0000 0000</div>
@@ -258,5 +316,11 @@
     <div>COPYRIGHT © 유카 주식회사 ALL RIGHTS RESERVED.</div>
   </footer>
 
-</body>
-</html>
+  <script>
+    // 모달 열기
+    document.getElementById("openModal").onclick = function() {
+      document.getElementById("myModal").style.display = "flex";
+    };
+
+    // 모달 닫기
+   
