--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     .recommend-section h2 {
       font-size: 1.5em;
       margin-bottom: 20px;
-      color: #00bfffc4;
+      color: #000000c4;
     }
 
     .recommend-cars {
@@ -172,16 +172,18 @@
 
     /* 푸터 */
     footer {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      font-size: 0.9em;
-      text-align: center;
-    }
-
-    footer div {
-      margin: 5px 0;
-    }
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 15px;
+            margin-top: 20px;
+            position:fixed;
+            bottom : 0;
+            width:100%
+        }
+        footer div {
+            margin: 5px 0;
+        }
 
     /* 모달 스타일 */
     .modal {
