--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         .search-bar input {
             border: none;
             outline: none;
-            font-size: 1.2em;
+            font-size: 15px;
         }
         .search-bar input::placeholder {
             color: #676767;
