--- a/find-id.html
+++ b/find-id.html
@@ -89,7 +89,7 @@
     <h2>아이디 찾기</h2>
 
     <!-- 아이디 찾기 폼 -->
-    <form action="find-id-result.html" method="post">
+    <form action="find-id.html" method="post">
       <!-- 이메일 또는 전화번호 입력 -->
       <div class="input-group">
         <label for="email">이메일 또는 전화번호</label>
@@ -102,7 +102,7 @@
 
     <!-- 링크 -->
     <div class="link">
-      <p>아이디를 기억하시나요? <a href="login.html">로그인</a></p>
+      <p>아이디를 기억하시나요? <a href="login2.html">로그인</a></p>
     </div>
   </div>
 
