--- a/find-password.html
+++ b/find-password.html
@@ -108,7 +108,7 @@
 
     <!-- 링크 -->
     <div class="link">
-      <p>비밀번호를 기억하시나요? <a href="login.html">로그인</a></p>
+      <p>비밀번호를 기억하시나요? <a href="login2.html">로그인</a></p>
     </div>
   </div>
 
