--- a/login1.html
+++ b/login1.html
@@ -183,7 +183,7 @@
     </form>
 
     <div class="link">
-      <p>이미 계정이 있으신가요? <a href="#">로그인</a></p>
+      <p>이미 계정이 있으신가요? <a href="login2.html">로그인</a></p>
     </div>
   </div>
 
