--- a/login2.html
+++ b/login2.html
@@ -107,9 +107,9 @@
 
     <!-- 링크 -->
     <div class="link">
-      <p>회원이 아니신가요? <a href="signup.html">회원가입</a></p>
-      <p><a href="#">아이디를 잊으셨나요?</a></p>
-      <p><a href="#">비밀번호를 잊으셨나요?</a></p>
+      <p>회원이 아니신가요? <a href="login1.html">회원가입</a></p>
+      <p><a href="find-id.html">아이디를 잊으셨나요?</a></p>
+      <p><a href="find-password.html">비밀번호를 잊으셨나요?</a></p>
     </div>
   </div>
 
