--- a/mypage.html
+++ b/mypage.html
@@ -117,15 +117,15 @@
 <!-- 헤더 -->
 <header>
     <div>
-        <a href="#">내차팔기</a>
+        <a href="gucssan.html">내차팔기</a>
         <a href="#">내차사기</a>
-        <a href="#">렌트</a>
+        <a href="lentcar.html">렌트</a>
         <a href="#">금융</a>
         <a href="#">미디어</a>
     </div>
     <div class="login-section">
-        <a href="#">로그인</a> | 
-        <a href="#">회원가입</a>
+        <a href="login2.html">로그인</a> | 
+        <a href="login1.html">회원가입</a>
     </div>
 </header>
 
@@ -146,23 +146,23 @@
     <div class="stats">
         <div>
             <h3>6</h3>
-            <p>찜한 차량</p>
+            <a href="mypage1.html"">찜한 차량</a>
         </div>
         <div>
             <h3>21</h3>
-            <p>최근 본 차량</p>
+            <a href="mypage2.html"">최근 본 차량</a>
         </div>
         <div>
             <h3>0</h3>
-            <p>판매중 차량</p>
+            <a href="mypage3.html"">판매중 차량</a>
         </div>
         <div>
             <h3>0</h3>
-            <p>판매된 차량</p>
+            <a href="mypage4.html"">판매된 차량</a>
         </div>
         <div>
             <h3>0</h3>
-            <p>구매문의 차량</p>
+            <a href="mypage5.html"">구매문의 차량</a>
         </div>
     </div>
 
@@ -178,7 +178,7 @@
         <ul>
             <li><a href="#">자동차조회</a></li>
             <li><a href="#">최근활동</a></li>
-            <li><a href="#">찜한 차량</a></li>
+            <li><a href="mypage1.html">찜한 차량</a></li>
             <li><a href="#">고객센터</a></li>
         </ul>
     </div>
