--- a/mypage5.html
+++ b/mypage5.html
@@ -190,29 +190,29 @@
     <div class="stats">
         <div>
             <h3>6</h3>
-            <p>찜한 차량</p>
+            <a href="mypage1.html"">찜한 차량</a>
         </div>
         <div>
             <h3>21</h3>
-            <p>최근 본 차량</p>
+            <a href="mypage2.html"">최근 본 차량</a>
         </div>
         <div>
             <h3>0</h3>
-            <p>판매중 차량</p>
+            <a href="mypage3.html"">판매중 차량</a>
         </div>
         <div>
             <h3>0</h3>
-            <p>판매된 차량</p>
+            <a href="mypage4.html"">판매된 차량</a>
         </div>
         <div>
             <h3>0</h3>
-            <p>구매문의 차량</p>
+            <a href="mypage5.html"">구매문의 차량</a>
         </div>
     </div>
 
     <!-- 최근 판매된 섹션 -->
     <div class="favorite-cars">
-        <h2>판매된 차량</h2>
+        <h2>구매문의 차량</h2>
         <ul>
             <li>
                 <img src="https://via.placeholder.com/60" alt="차량 이미지">
