--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
     <header>
         <div class="logo">UCAR</div>
         <nav>
-            <a href="gucssan.html">내차팔기</a>
+            <a href="gucsan.html">내차팔기</a>
             <a href="#">내차사기</a>
-            <a href="lentcar.html">렌트</a>
+            <a href="rentcar.html">렌트</a>
             <a href="#">금융</a>
             <a href="#">미디어</a>
             <a href="mypage.html">마이페이지</a>
